--- a/company.html
+++ b/company.html
@@ -23,15 +23,7 @@
         </nav>
     </header>
 
-    <div class='sub_header'>
-        <ul class='sub_li'>
-            <li><a href='#' id='emphasis'>COMPANY</a></li>
-            <li><a href='#'></a></li>
-            <li><a href='#'></a></li>
-            <li><a href='#'></a></li>
-            <li><a href='#'></a></li>
-        </ul>
-    </div>
+
 
     <main>
 
@@ -39,7 +31,7 @@
 
         <div class='company'>
             <div class='com'>
-                <div id='com_img'></div>
+                <div class='com_img' id='logo1'></div>
                 <p id='sm_p'>인재 채용 희망</p>
                 <h2><a class="companyName" href="./company2.html">NEXON</a></h2>
                 <ul>
@@ -52,9 +44,9 @@
             </div>
 
             <div class='com'>
-                <div id='com_img'></div>
+                <div class='com_img' id='logo2'></div>
                 <p id='sm_p'>인재 채용 희망</p>
-                <h2><a class="companyName" href="./company2.html">NEXON</a></h2>
+                <h2><a class="companyName" href="./company2.html">SAMSUNG</a></h2>
                 <ul>
                     <li onclick = "location.href = './tag.html' ">#착한</li>
                     <li onclick = "location.href = './tag.html' ">#활동적인</li>
@@ -65,9 +57,9 @@
             </div>
 
             <div class='com'>
-                <div id='com_img'></div>
+                <div class='com_img' id='logo3'></div>
                 <p id='sm_p'>인재 채용 희망</p>
-                <h2><a class="companyName" href="./company2.html">NEXON</a></h2>
+                <h2><a class="companyName" href="./company2.html">KAKAO</a></h2>
                 <ul>
                     <li onclick = "location.href = './tag.html' ">#착한</li>
                     <li onclick = "location.href = './tag.html' ">#활동적인</li>
@@ -78,10 +70,10 @@
             </div>
 
             <div class='com'>
-                <div id='com_img'></div>
+                <div class='com_img' id='logo4'></div>
 
                 <p id='sm_p'>인재 채용 희망</p>
-                <h2><a class="companyName" href="./company2.html">NEXON</a></h2>
+                <h2><a class="companyName" href="./company2.html">COUPANG</a></h2>
                 <ul>
                     <li onclick = "location.href = './tag.html' ">#착한</li>
                     <li onclick = "location.href = './tag.html' ">#활동적인</li>
