--- a/works.html
+++ b/works.html
@@ -62,7 +62,7 @@
             <p id='work_hash' style="cursor:pointer;"># UX/UI</p>
         </div>
 
-        <div class='work_3d' id='fir_3d' OnClick="location.href ='./students_2.html'" style="cursor:pointer;"></div>
+        <div class='work_3d' id='fir_3d' OnClick="location.href ='./works_2.html'" style="cursor:pointer;"></div>
 
         <div id='work_mname'>
             <p>3D Dot Book</p>
@@ -71,8 +71,8 @@
         </div>
 
         <div class='work_main' id='second_work'>
-            <div id='work_mom' OnClick="location.href ='./students_2.html'" style="cursor:pointer;"></div>
-            <div id='work_mom' OnClick="location.href ='./students_2.html'" style="cursor:pointer;"></div>            
+            <div id='work_mom' OnClick="location.href ='.works_2.html'" style="cursor:pointer;"></div>
+            <div id='work_mom' OnClick="location.href ='./works_2.html'" style="cursor:pointer;"></div>            
         </div>
         
         <div id='work_mname'>
@@ -84,7 +84,7 @@
             <p id='work_hash' style="cursor:pointer;"># app Design</p>
         </div>
 
-        <div class='work_3d' id='sec_3d' OnClick="location.href ='./students_2.html'" style="cursor:pointer;"></div>
+        <div class='work_3d' id='sec_3d' OnClick="location.href ='./works_2.html'" style="cursor:pointer;"></div>
 
         <div id='work_mname'>
             <p>3D Dot Book</p>
