--- a/tag.html
+++ b/tag.html
@@ -56,57 +56,95 @@
         <div id='stu2_wline'></div>
     </div>
     <div class="studentTag">
-        <div>
-            <h2>나졸업</h2>
-            <p>미디어디자인전공<br>kpu123@gmail.com</p>
+        <div class="explainBtn" style="background-image: url('./img/졸전 사진/junghyeonsoo.jpg'); background-position: center; background-repeat: no-repeat; background-size: cover;">
+            <div id="explain2">
+                <h2>나졸업</h2>
+                <p>미디어디자인전공<br>kpu123@gmail.com</p>
+                <ul>
+                    <li># UX/UI</li>
+                    <li># Graphic</li>
+                </ul>
+            </div>
         </div>
-        <div>
-            <h2>나졸업</h2>
-            <p>미디어디자인전공<br>kpu123@gmail.com</p>
+        <div class="explainBtn" style="background-image: url('./img/졸전 사진/leechaeyeon.jpeg'); background-position: center; background-repeat: no-repeat; background-size: cover;">
+            <div id="explain2">
+                <h2>나졸업</h2>
+                <p>미디어디자인전공<br>kpu123@gmail.com</p>
+                <ul>
+                    <li># UX/UI</li>
+                    <li># Graphic</li>
+                </ul>
+            </div>
         </div>
-        <div>
-            <h2>나졸업</h2>
-            <p>미디어디자인전공<br>kpu123@gmail.com</p>
+        <div class="explainBtn" style="background-image: url('./img/졸전 사진/hahyemi.jpeg'); background-position: center; background-repeat: no-repeat; background-size: cover;">
+            <div id="explain2">
+                <h2>나졸업</h2>
+                <p>미디어디자인전공<br>kpu123@gmail.com</p>
+                <ul>
+                    <li># UX/UI</li>
+                    <li># Graphic</li>
+                </ul>
+            </div>
         </div>
-        <div>
-            <h2>나졸업</h2>
-            <p>미디어디자인전공<br>kpu123@gmail.com</p>
+        <div class="explainBtn" style="background-image: url('./img/졸전 사진/leewonjae.jpg'); background-position: center; background-repeat: no-repeat; background-size: cover;">
+            <div id="explain2">
+                <h2>나졸업</h2>
+                <p>미디어디자인전공<br>kpu123@gmail.com</p>
+                <ul>
+                    <li># UX/UI</li>
+                    <li># Graphic</li>
+                </ul>
+            </div>
+    </div>
+        <div class="explainBtn" style="background-image: url('./img/졸전 사진/sujungmin.jpeg'); background-position: center; background-repeat: no-repeat; background-size: cover;">
+            <div id="explain2">
+                <h2>나졸업</h2>
+                <p>미디어디자인전공<br>kpu123@gmail.com</p>
+                <ul>
+                    <li># UX/UI</li>
+                    <li># Graphic</li>
+                </ul>
+            </div>
         </div>
-        <div>
-            <h2>나졸업</h2>
-            <p>미디어디자인전공<br>kpu123@gmail.com</p>
-        </div>
-        <div>
-            <h2>나졸업</h2>
-            <p>미디어디자인전공<br>kpu123@gmail.com</p>
+        <div class="explainBtn" style="background-image: url('./img/졸전 사진/kimgoeun.jpeg'); background-position: center; background-repeat: no-repeat; background-size: cover;">
+            <div id="explain2">
+                <h2>나졸업</h2>
+                <p>미디어디자인전공<br>kpu123@gmail.com</p>
+                <ul>
+                    <li># UX/UI</li>
+                    <li># Graphic</li>
+                </ul>
+            </div>
         </div>
     </div>
     <div id="MDHolder">
         <button id="middleMore">more</button>
     </div>
+
     <div class='stu2_contact' id="tagTitle2">
         <h3>COMPANY</h3>
         <div id='stu2_wline'></div>
     </div>
 
+    <div id="separate">
     <div class="companyTag">
         <div id="companyBox">
-            <div>
+            <div style="background-image: url('./img/넥슨로고.png'); background-position: center; background-repeat: no-repeat; background-size:contain;">
                 <h2>Kakao</h2>
             </div>
         </div>
         <div id="companyBox">
-            <div>
+            <div style="background-image: url('./img/삼성로고.png'); background-position: center; background-repeat: no-repeat; background-size:contain;">
                 <h2>Kakao</h2>
             </div>
         </div>
         <div id="companyBox">
-            <div>
+            <div style="background-image: url('./img/쿠팡로고.png'); background-position: center; background-repeat: no-repeat; background-size:contain;">
                 <h2>Kakao</h2>
             </div>
         </div>
         <div id="companyBox">
-            <div>
+            <div style="background-image: url('./img/'); background-position: center; background-repeat: no-repeat; background-size:contain;">
                 <h2>Kakao</h2>
             </div>
         </div>
@@ -121,6 +159,8 @@
             </div>
         </div>
     </div>
+</div>
+
     <div id="MDHolder">
         <button id="middleMore">more</button>
     </div>
