--- a/works_2.html
+++ b/works_2.html
@@ -78,23 +78,23 @@
             <h3>PARTICIPATION</h3>
             <div id='stu2_wline'></div>
         </div>
-
+        
         <div class='detail_work'>
             <div id= 'deta' >
-                <div id="stuImg" OnClick="location.href ='./students_2.html'" style="cursor:pointer;"></div>
+                <div id="stuImg" OnClick="location.href ='./students_2.html'" style="cursor:pointer; background-image: url('./img/졸전 사진/kimsojung.jpeg'); background-position: center; background-repeat: no-repeat; background-size:cover;"></div>
                 <ul>
                     <li onclick = "location.href = './tag.html' " style="cursor:pointer;"># Blender</li>
                     <li onclick = "location.href = './tag.html' " style="cursor:pointer;"># UX/UI</li>
                 </ul>
             </div>
             <div id= 'deta' >
-                <div id="stuImg" OnClick="location.href ='./students_2.html'" style="cursor:pointer;"></div>
+                <div id="stuImg" OnClick="location.href ='./students_2.html'" style="cursor:pointer; background-image: url('./img/졸전 사진/leechaeyeon.jpeg'); background-position: center; background-repeat: no-repeat; background-size:cover;"></div>
                 <ul>
                     <li onclick = "location.href = './tag.html' " style="cursor:pointer;"># Blender</li>
                     <li onclick = "location.href = './tag.html' " style="cursor:pointer;"># UX/UI</li>
                 </ul></div>
             <div id= 'deta' >
-                <div id="stuImg" OnClick="location.href ='./students_2.html'" style="cursor:pointer;"></div>
+                <div id="stuImg" OnClick="location.href ='./students_2.html'" style="cursor:pointer; background-image: url('./img/졸전 사진/moonjisub.jpg'); background-position: center; background-repeat: no-repeat; background-size:cover;"></div>
                 <ul>
                     <li onclick = "location.href = './tag.html' " style="cursor:pointer;"># Blender</li>
                     <li onclick = "location.href = './tag.html' " style="cursor:pointer;"># UX/UI</li>
