Footer and contents Update

--- a/company2.html
+++ b/company2.html
@@ -381,7 +381,7 @@ footer h1 {
             </div>
 
             <footer>
-                <h1>footer</h1>
+                <h3>KPU DESIGN</h3>
             </footer>
 
         <script>
