--- a/students_2.html
+++ b/students_2.html
@@ -57,7 +57,7 @@
             <div class='stu2_me'>
                 <h3>ABOUT ME</h3>
                 <div id='stu2_line'></div>
-                <p>the quick brown fox jumps over the lazy dog the quick brown fox jumps over the lazy dog the quick brown fox jumps over the lazy dog the quick brown fox jumps over the lazy dog the quick brown fox jumps over the lazy dog the quick brown fox jumps over the lazy dog the quick brown fox jumps over the lazy dog the quick brown fox jumps over the lazy dog the quick brown fox </p>
+                <p>저를 대표하는 두 단어는 '헌신'과 '집념'입니다. 먼저, 대학 시절 다양한 팀 대외활동을 경험하며 개인적인 손해나 희생을 감수하면서 팀 전체의 성과를 위해 노력했고, 그 결과 팀의 목표  달성은 물론 제 성과 기여도에 대해 팀원들에게 인정받았습니다. 그리고 컨설팅 기업의 인턴으로 근무하며 어려운 프로젝트에도 거침없이 도전하는 저에게 PM이 나방이라는 별명을 붙여주기도 했습니다. 제가 가진 이 역량을 바탕으로 도전에 동참하고 싶습니다. </p>
             </div>
             
         </div>
@@ -107,7 +107,7 @@
     </main>
 
     <footer>
-        <h1>footer</h1>
+        <h3>KPU DESIGN</h3>
     </footer>
 
 
