--- a/works_2.html
+++ b/works_2.html
@@ -147,7 +147,7 @@
 
 
     <footer>
-        <h1>footer</h1>
+        <h3>KPU DESIGN</h3>
     </footer>
 
     <script src="./script.js"></script>
