--- a/company2.html
+++ b/company2.html
@@ -67,7 +67,7 @@ ul {
 
 .introduce {
     width: 70%;
-    height: 520px;
+    height: 480px;
     margin: auto;
     margin-top: 72px;
     display: flex;
@@ -76,7 +76,7 @@ ul {
 #students_detail {
     width: 30%;
     height: 100%;
-    border: 1px solid #333;
+    border: 1px solid rgb(140, 140, 140);
     margin-right: 20px;
 
     border-radius: 10px;
@@ -85,7 +85,6 @@ ul {
 #students_img {
     width: 180px;
     height: 180px;
-    background-color: #C4C4C4;
     margin: auto;
     margin-top:10%;
     border-radius: 200px;
@@ -168,7 +167,7 @@ ul {
 #students_about {
     width: 70%;
     height: 100%;
-    border: 1px solid #333;
+    border: 1px solid rgb(140, 140, 140);
     border-radius: 10px;
     display: flex;
     flex-wrap: wrap;
@@ -180,6 +179,12 @@ ul {
     text-align: left;
 }
 
+#students_about h2{
+    font-size: 22px;
+    font-weight: 500;
+    color: #333;
+}
+
 #stu_side {
     width: 90%;
     margin: auto;
@@ -188,6 +193,9 @@ ul {
 
 #students_about p{
     margin-bottom: 40px;
+    color: #4D4D4D;
+    font-size: 12px;
+    line-height: 20px;
 }
 
 .apply{
@@ -317,9 +325,9 @@ footer h1 {
 
         <div class='introduce'>
             <div id='students_detail'>
-                <div id='students_img'></div>
-                <p>의류</p>
-                <h2>멋쟁이호랭이</h2>
+                <div id='students_img' style="background-image: url('./img/넥슨로고.png'); background-position: center; background-repeat: no-repeat; background-size:contain;"></div>
+                <p>비디오 게임</p>
+                <h2>NEXON</h2>
                
                 <p id="link">http://www.kpu.ac.kr/index.do?sso=ok</p>
                 <p id='det'>이메일 <span id='email'>kpu123456@gmail.com</span></p>
@@ -333,11 +341,10 @@ footer h1 {
             <div id='students_about'>
                 <div id='stu_side'>
                     <h1>회사 소개</h1>
-                    <p>the quick brown fox jumps over the lazy dog the quick brown fox jumps over the lazy dog the quick brown fox jumps over the lazy 
-                        the quick brown fox jumps over the lazy dog the quick brown fox jumps over the lazy dog the quick brown fox jumps over the lazy
-                        the quick brown fox jumps over the lazy dog the quick brown fox jumps over the lazy dog the quick brown fox jumps over the lazy
-                        the quick brown fox jumps over the lazy dog the quick brown fox jumps over the lazy dog the quick brown fox jumps over the lazy
-                        the quick brown fox jumps over the lazy dog the quick brown fox jumps over the lazy dog the quick brown fox jumps over the lazy
+                    <p>주식회사 넥슨은 대한민국에서 가장 큰 비디오 게임 회사 중 하나이다. 유명한 넥슨의 온라인 비디오 게임으로는 바람의나라, 바람의나라:연, FIFA 온라인 4, 피파 모바일, 
+                        메이플스토리, 크레이지 아케이드BnB, 카트라이더, 서든어택, 카트라이더 러쉬+등이 있다.넥슨 코리아는 판교테크노밸리에 위치하고 있다. 넥슨 코리아와 자회사 대부분이 
+                        이 곳에 모여있다. 여기서 매년 넥슨 개발자 컨퍼런스 NDC도 개최된다. 전체 넥슨 그룹의 지주 회사인 NXC는 제주도에 있는데 이것은 지주회사의 역할만 할 뿐이다. 
+                        이 점은 카카오가 제주와 판교 사옥이 2개를 갖고 있지만, 두 사옥 모두 이원화 사옥처럼 운영하는 점과는 좀 다른 배경이다.
                     </p>
 
                     <h1>원하는 인재상</h1>
@@ -346,11 +353,10 @@ footer h1 {
                         <li onclick = "location.href = './tag.html' "># 활동적인</li>
                         <li onclick = "location.href = './tag.html' "># 자신감</li>
                     </ul>
-                    <p>the quick brown fox jumps over the lazy dog the quick brown fox jumps over the lazy dog the quick brown fox jumps over the lazy 
-                        the quick brown fox jumps over the lazy dog the quick brown fox jumps over the lazy dog the quick brown fox jumps over the lazy
-                        the quick brown fox jumps over the lazy dog the quick brown fox jumps over the lazy dog the quick brown fox jumps over the lazy
-                        the quick brown fox jumps over the lazy dog the quick brown fox jumps over the lazy dog the quick brown fox jumps over the lazy
-                        the quick brown fox jumps over the lazy dog the quick brown fox jumps over the lazy dog the quick brown fox jumps over the lazy
+                    <p>세계최초, 최고라는 수식어를 만들어 내는 넥슨의 기업문화는 젊음으로 대표되는 다양한 코드를 지니고 있습니다. 열정과 패기, 도전정신, 신선한 아이디어, 사고의 유연함 그리고
+                         꿈을 실현시킬 수 있는 논리, 모두 넥슨이 바라는 넥슨인의 모습입니다. 넥슨인(NEXON People)은 1.창의적인 사람(originality) , 즉 새로움을 찾아내고 다른 이에게
+                          즐거움을 전달해 줄 줄 아는 인재 2.도전하는 사람(challenge), 즉 실패를 두려워하지 않고 넘어설 줄 아는 용기를 가진 인재 3. 다양한 문화를 경험한 사람(cultural 
+                          diversity), 즉 다양한 문화를 경험하고 그것을 내것으로 만들 수 있는 인재 입니다.
 
                     </p>
                 </div>
