--- a/company.html
+++ b/company.html
@@ -39,7 +39,7 @@
                     <li onclick = "location.href = './tag.html' ">#활동적인</li>
                     <li onclick = "location.href = './tag.html' ">#짱</li>
                 </ul>
-                <p id = 'talk'>졸업 축하 인사 ) 산기대 졸업생 여러분! 졸업을 진심으로 축하드립니다. the quick brown fox jumps over the lazy dog the quick brown fox jumps over the lazy dog the quick </p>
+                <p id = 'talk'> 산기대 졸업생 여러분! 졸업을 진심으로 축하드립니다. 정말 수고 많으셨습니다. 졸업은 또 다른 시작이라는 말이 있습니다. 여러분의 새로운 시작을 진심으로 응원합니다. 앞으로의 앞날에 늘 즐거운 일만 가득하시길 바랍니다. </p>
                 <p><a href='./company2.html' id='com_go'>지원하기</a></p>
             </div>
 
@@ -52,7 +52,7 @@
                     <li onclick = "location.href = './tag.html' ">#활동적인</li>
                     <li onclick = "location.href = './tag.html' ">#짱</li>
                 </ul>
-                <p id = 'talk'>졸업 축하 인사 ) 산기대 졸업생 여러분! 졸업을 진심으로 축하드립니다. the quick brown fox jumps over the lazy dog the quick brown fox jumps over the lazy dog the quick </p>
+                <p id = 'talk'>산기대 졸업생 여러분! 졸업을 진심으로 축하드립니다. 정말 수고 많으셨습니다. 졸업은 또 다른 시작이라는 말이 있습니다. 여러분의 새로운 시작을 진심으로 응원합니다. 앞으로의 앞날에 늘 즐거운 일만 가득하시길 바랍니다. </p>
                 <p><a href='./company2.html' id='com_go'>지원하기</a></p>
             </div>
 
@@ -65,7 +65,7 @@
                     <li onclick = "location.href = './tag.html' ">#활동적인</li>
                     <li onclick = "location.href = './tag.html' ">#짱</li>
                 </ul>
-                <p id = 'talk'>졸업 축하 인사 ) 산기대 졸업생 여러분! 졸업을 진심으로 축하드립니다. the quick brown fox jumps over the lazy dog the quick brown fox jumps over the lazy dog the quick </p>
+                <p id = 'talk'>산기대 졸업생 여러분! 졸업을 진심으로 축하드립니다. 정말 수고 많으셨습니다. 졸업은 또 다른 시작이라는 말이 있습니다. 여러분의 새로운 시작을 진심으로 응원합니다. 앞으로의 앞날에 늘 즐거운 일만 가득하시길 바랍니다. </p>
                 <p><a href='./company2.html' id='com_go'>지원하기</a></p>
             </div>
 
@@ -79,7 +79,7 @@
                     <li onclick = "location.href = './tag.html' ">#활동적인</li>
                     <li onclick = "location.href = './tag.html' ">#짱</li>
                 </ul>
-                <p id = 'talk'>졸업 축하 인사 ) 산기대 졸업생 여러분! 졸업을 진심으로 축하드립니다. the quick brown fox jumps over the lazy dog the quick brown fox jumps over the lazy dog the quick </p>
+                <p id = 'talk'>산기대 졸업생 여러분! 졸업을 진심으로 축하드립니다. 정말 수고 많으셨습니다. 졸업은 또 다른 시작이라는 말이 있습니다. 여러분의 새로운 시작을 진심으로 응원합니다. 앞으로의 앞날에 늘 즐거운 일만 가득하시길 바랍니다. </p>
                 <p><a href='./company2.html' id='com_go'>지원하기</a></p>
             </div>
 
