--- a/works_2.html
+++ b/works_2.html
@@ -41,20 +41,20 @@
             <button id='comment_btn' style="cursor:pointer;">COMMENT</button>
         </div>
         
-        <p id='comment_exp'>the quick brown fox jumps over the lazy dog the quick brown fox jumps over the lazy dog the quick brown fox jumps over the lazy dog the quick brown fox jumps over the lazy dog the quick brown fox jumps over the lazy dog the quick brown fox jumps over the lazy dog the quick brown fox jumps over the lazy dog the quick brown fox jumps over the lazy dog the quick brown fox </p>
+        <p id='comment_exp'>시각장애 아동을 위한 3D 스마트 도서 ‘Dot Book’은 기존의 스마트 교육으로 부터 소외되었던 시각장애 아동을 비시각 장애 아동과 같은 선상에서 교육할 수 있도록 하여, 또래의 아동과 동등한 정서 발달과 사회 간접경험을 할 수 있도록 도와주는 서비스 입니다.‘Dot-Book’은 시각 장애 아동이 동화책의 글과 그림을 정확하게 인지하게 하여 동화책 내용을 자세히 이해하고, 또한 다양한 소리와 움직이는 그림들을 통해 더욱 효과적으로 자신의 감정을 투영할 수 있도록 도와줍니다.</p>
 
         <div id='work_img'></div>
 
         <div class='middle_work' id="middle-workGap">
             <div class='mwImg' id='mw1'></div>
             <div id='mwIntro'>
-                <p id='left'>the quick brown fox jumps over the lazy dog the quick brown fox jumps over the lazy dog the quick brown fox jumps over the lazy dog the quick brown fox jumps over the lazy dog the quick brown fox jumps over the lazy dog the quick brown fox jumps over the lazy dog the quick brown fox jumps over the lazy dog the quick brown fox jumps over the lazy dog the quick brown fox </p>
+                <p id='left'>동화책은 아동의 정서 발달에 중요한 영향을 끼칩니다. 글뿐만 아니라 그림을 통해 아동은 동화책 속 상황을 정확하게 인지하고 자신의 감정을 투영하면서 정서적인 발달을 하게 됩니다.뿐만 아니라 동화책을 통해 예의, 용기, 배려/소통, 책임, 자기존중의 키워드를 간접적으로 학습함으로써 바람직한 사회성을 키울 수 있게 됩니다. 하지만 현재 시각 장애 아동을 위한 도서(텍스트만 점역된 책, 점자 스티커가 붙은 책, 촉감놀이 도서 등)는 아동이 동화속 상황을 정확하게 이해하기 어려워 또래에 비해 적절한 정서적/사회적 발달을 하기 어려운 상황입니다.</p>
             </div>
         </div>
 
         <div class='middle_work'>
             <div id='mwIntro'>
-                <p id='right'>the quick brown fox jumps over the lazy dog the quick brown fox jumps over the lazy dog the quick brown fox jumps over the lazy dog the quick brown fox jumps over the lazy dog the quick brown fox jumps over the lazy dog the quick brown fox jumps over the lazy dog the quick brown fox jumps over the lazy dog the quick brown fox jumps over the lazy dog the quick brown fox </p>
+                <p id='right'>시각 장애인과 비시각 장애인들은 시인지성 차이가 나기 때문에 시각 장애인을 위해서는 뚜렷한 명시성 대비를 필요로 합니다. 그래서 버튼의 컬러를 흰색과 파랑으로 하여 명시성 대비를, 무광/유광 대비로 촉감 대비를 주어 버튼의 위치를 쉽게 인지 할 수 있도록 하였습니다. 또한 시각 장애 아동을 위한 센터 표시와 ‘Dot-Book’의 로고를 점자로 배치해 디자인을 하였습니다. 이제 ‘Dot-Book’의 시각 장애 아동을 위한 디자인으로 편하게 닷북을 읽어보세요!</p>
             </div>
             <div class='mwImg' id='mw2'></div>
         </div>
@@ -64,14 +64,14 @@
                 <div id='new1'></div>
                 <div id='new2'></div>
             </div>
-            <p>the quick brown fox jumps over the lazy dog the quick brown fox jumps over the lazy dog the quick brown fox jumps over the lazy dog the quick brown fox jumps over the lazy dog the quick brown fox jumps over the lazy dog the quick brown fox jumps over the lazy dog the quick brown fox jumps over the lazy dog the quick brown fox jumps over the lazy dog the quick brown fox </p>
+            <p>‘Dot-Book’의 디스플레이는 수많은 Interactive-pin으로 이루어져 동화책 속 글과 그림을 점자로 표현합니다. 움직이는 Interactive-pin을 통해 페이지를 바꾸는 것 뿐만 아니라 동화 속그림들을 움직이면서 시각 장애 아동이 독서를 함에 있어 더욱 흥미를 느낄 수 있도록 합니다. 또한 점자 핀을 누를 시, 상황에 맞는 다양한 소리를 제공하여 동화 속 상황에 더욱 몰입 할 수 있도록 합니다. 모두 함께 Interactive-pin을 통해 동화 속으로 들어가 볼까요? </p>
         </div>
 
         <div class='stu2_contact' id="commentTitle">
             <h3>COMMENT</h3>
             <div id='stu2_wline'></div>
         </div>
-        <p id="commentP">the quick brown fox jumps over the lazy dog the quick brown fox jumps over the lazy dog the quick brown fox jumps over the lazy dog the quick brown fox jumps over the lazy dog the quick brown the quick brown fox jumps over the lazy dog the quick brown fox jumps over the lazy dog the quick brown fox jumps over</p>
+        <p id="commentP">대학생활, 졸업작품 모두 수고많으셨습니다. 카테고리 화면에선 세계명작부터 생활동화까지 다양한 책을 접할 수 있고 연령별/순위별 카테고리를 통해 아이가 흥미를 가질 수 있는 다양한 책을 추천할 수 있는 서비스 아주 좋네요. 대학생활에서 그래왔듯 항상 열심히 그리고 행복하게 빛나게 살아가길 바랍니다.</p>
         <p id="pro"> 지도교수<span>이천재</span></p>
 
         <div class='stu2_contact' id="commentTitle2">
@@ -115,27 +115,27 @@
 
             <div class='chat'>
                 <div class='chated'>
-                    <div id='nm'><p>이름</p></div>
-                    <div id='sp'><p>마지막 졸업작품 축하해~ 마지막 졸업작품 축하해~ 마지막 졸업작품 축하해~ 마지막 졸업작품 축하해~ 마지막 졸업작품 축하해~마지막 졸업작품 축하해~마지막 졸업작품 축하해~</p></div>
+                    <div id='nm'><p>기획팀</p></div>
+                    <div id='sp'><p>대학생활, 졸업작품 모두 수고많으셨습니다. 대학생활에서 그래왔듯 항상 열심히 그리고 행복하게 빛나게 살아가요 우리! </p></div>
                 </div>
 
                 <div class='chated'>
-                    <div id='nm'><p>이름</p></div>
-                    <div id='sp'><p>말 할 내용 말 할 내용말 할 내용말 할 내용말 할 내용말 할 내용말 할 내용말 할 내용말 할 내용말 할 내용말 할 내용</p></div>
+                    <div id='nm'><p>진절미</p></div>
+                    <div id='sp'><p>대학 졸업 축하해! 정말 멋지다 !! 수고 정말 많았어 파뤼하쟈 파뤼 헤헤 화이팅~! 너가 제일 빛나!</p></div>
                 </div>
 
                 <div class='chated'>
-                    <div id='nm'><p>이름</p></div>
-                    <div id='sp'><p>말 할 내용 말 할 내용말 할 내용말 할 내용말 할 내용말 할 내용말 할 내용말 할 내용말 할 내용말 할 내용말 할 내용</p></div>
+                    <div id='nm'><p>이관수</p></div>
+                    <div id='sp'><p>여러분의 피땀눈물 잘봤어요 넘 수고 많았어!!! 회사 대표님들 얼른 이 팀원들 데려가세요 인재가 여기있어요!!!</p></div>
                 </div>
                 <div class='chated'>
-                    <div id='nm'><p>이름</p></div>
-                    <div id='sp'><p>말 할 내용 말 할 내용말 할 내용말 할 내용말 할 내용말 할 내용말 할 내용말 할 내용말 할 내용말 할 내용말 할 내용</p></div>
+                    <div id='nm'><p>김경미</p></div>
+                    <div id='sp'><p>졸작하느라 너무너무너무 수고 많았어!!! 노력한만큼 결과물이 나온 것 같아서 정말 정말 보기 좋다 ㅎㅎ 앞으로 가는 길 꽃길만 가득하길 기도할게!</p></div>
                 </div>
 
                 <div class='chated'>
-                    <div id='nm'><p>이름</p></div>
-                    <div id='sp'><p>말 할 내용 말 할 내용말 할 내용말 할 내용말 할 내용말 할 내용말 할 내용말 할 내용말 할 내용말 할 내용말 할 내용</p></div>
+                    <div id='nm'><p>유지민</p></div>
+                    <div id='sp'><p>너어어무 고생많았어!! 넘 멋있구 이쁘구 혼자 다해💛 포폴 잘 만들구 취업도 문 뿌시고 들어가쟈아아아ㅏ!!! 대학 졸업 축하해!</p></div>
                 </div>
                 
             </div>
