ide, mde Update

--- a/ide.html
+++ b/ide.html
@@ -32,19 +32,17 @@
 
     <h1 class="aboutTitle">INDUSTRIAL <br> DESIGN <br> ENGINEERING</h1>
     <div class="poly3"></div>
-    <p id="info">디자인기술이 창의적인 디자인 발상법과 공학적 마인드의 통합적 접근법을 추구하는 시대로 바뀜에 따라 단순히 심미적 역할에만 머물렀던 디자인 개<br>
-        념에서 확장하여 4차 산업혁명 기술 분야를 선도하고자 디자인학부가 디자인공학부로 변경되었습니다. 새로운 디자인공학부는 전공 분야 최고의 교수<br>
-        진과 산업체 수요 기반 실무형 교육과정을 통해 미래사회를 이끌어나갈 창의적 인재를 양성하는데 최선을 다하겠습니다.</p>
+    <p id="info">디자인 트렌드와 최신기술을 파악하여 신제품을 기획할 수 있는 능력,<br>  심미적 형태와 인터랙션을 조화롭게 추구하는 컨셉 개발 능력,<br> 비즈니스 관점에서 디자인을 구체화하여 표현할 수 있는 능력,<br>  양산을 고려하여 제품하드웨어를 설계할 수 있는 능력을 가진 디자이너를 양성하기 위해 최선을 다하겠습니다.</p>
     <div class="poly4"></div>
     <span class="backgroundText" id="media">INDUSTRIAL</span>
     <span class="backgroundText" id="design">DESIGN</span>
     <span class="backgroundText" id="Engineering">ENGINEERING</span>
     
     <div class="mdeCon" id="firstmdeCon">
-        <div class='introduce'>
-            <div id='introduceImg'></div>
+        <div class='introduce' >
+            <div class='introduceImg' id='int_img3'></div>
             <div>
-                <h2>교육 목적 및 목표</h2>
+                <h2>산업디자인전공의 비전</h2>
                 <p>디자인기술이 창의적인 디자인 발상법과 공학적 마인드의 통합적 접근법을 추구하는 시대로 바뀜에 따라 단순히 심미적 역할에만 머물렀던 디자인 개념에서 확장하여 4차 산업혁명 기술 분야를 선도하고자 디자인학부가 디자인공학부로 변경되었습니다. 새로운 디자인공학부는 전공 분야 최고의 교수진과 산업체 수요 기반 실무형 교육과정을 통해 미래사회를 이끌어나갈 창의적 인재를 양성하는데 최선을 다하겠습니다.</p>
             </div>
         </div>
@@ -54,15 +52,19 @@
         <div class='introduce'>
             <div>
                 <h2>교육 목적 및 목표</h2>
-                <p>디자인기술이 창의적인 디자인 발상법과 공학적 마인드의 통합적 접근법을 추구하는 시대로 바뀜에 따라 단순히 심미적 역할에만 머물렀던 디자인 개념에서 확장하여 4차 산업혁명 기술 분야를 선도하고자 디자인학부가 디자인공학부로 변경되었습니다. 새로운 디자인공학부는 전공 분야 최고의 교수진과 산업체 수요 기반 실무형 교육과정을 통해 미래사회를 이끌어나갈 창의적 인재를 양성하는데 최선을 다하겠습니다.</p>
+                <p>사용자 중심 디자인과 창의적 디자인 사고를 기반으로 한 실무형 인재육성
+                    기업의 수요를 반영하여 공학적 기술 이해를 바탕으로 리서치, 사용자 경험과 인터랙션, 제품 기획과 개발 과정까지 아이디어 발상, 디자인개발, 2D/3D 설계 시뮬레이션 기술을 통합적으로 활용할 수 있는 디자이너를 양성
+                    제품 HW 구현, 작동 원리를 고려할 수 있는 디자이너
+                    차세대 IoT, 스마트 제품, 로봇 디자인과 실질적 기구설계 분야 학습
+                    산학 융합으로 차별화된 실무 중심의 융합형 디자인공학부 실현</p>
             </div>
-            <div id='introduceImg'></div>
+            <div class='introduceImg' id='int_img4'></div>
         </div>
     </div>
 
     <div class="mdePicture">
         <h1>PICTURES</h1>
-        <div class="picCon">
+        <div class="picCon" id='picIm'>
             <div></div>
             <div></div>
             <div></div>
