--- a/mde.html
+++ b/mde.html
@@ -32,9 +32,7 @@
 
     <h1 class="aboutTitle">MEDIA <br> DESIGN <br> ENGINEERING</h1>
     <div class="poly3"></div>
-    <p id="info">디자인기술이 창의적인 디자인 발상법과 공학적 마인드의 통합적 접근법을 추구하는 시대로 바뀜에 따라 단순히 심미적 역할에만 머물렀던 디자인 개<br>
-        념에서 확장하여 4차 산업혁명 기술 분야를 선도하고자 디자인학부가 디자인공학부로 변경되었습니다. 새로운 디자인공학부는 전공 분야 최고의 교수<br>
-        진과 산업체 수요 기반 실무형 교육과정을 통해 미래사회를 이끌어나갈 창의적 인재를 양성하는데 최선을 다하겠습니다.</p>
+    <p id="info">디자인 트렌드와 최신기술을 파악하여 신제품을 기획할 수 있는 능력,<br>  심미적 형태와 인터랙션을 조화롭게 추구하는 컨셉 개발 능력,<br> 인터랙티브 미디어 프로토타입을 제작할 수 있는 능력,<br> 인터랙티브 미디어를 제작할 수 있는 능력을 가진 디자이너를 양성하기 위해 최선을 다하겠습니다.</p>
     <div class="poly4"></div>
     <span class="backgroundText" id="media">MEDIA</span>
     <span class="backgroundText" id="design">DESIGN</span>
@@ -42,9 +40,9 @@
     
     <div class="mdeCon" id="firstmdeCon">
         <div class='introduce'>
-            <div id='introduceImg'></div>
+            <div class='introduceImg' id='int_img1'></div>
             <div>
-                <h2>교육 목적 및 목표</h2>
+                <h2>미디어디자인전공의 비전</h2>
                 <p>디자인기술이 창의적인 디자인 발상법과 공학적 마인드의 통합적 접근법을 추구하는 시대로 바뀜에 따라 단순히 심미적 역할에만 머물렀던 디자인 개념에서 확장하여 4차 산업혁명 기술 분야를 선도하고자 디자인학부가 디자인공학부로 변경되었습니다. 새로운 디자인공학부는 전공 분야 최고의 교수진과 산업체 수요 기반 실무형 교육과정을 통해 미래사회를 이끌어나갈 창의적 인재를 양성하는데 최선을 다하겠습니다.</p>
             </div>
         </div>
@@ -54,9 +52,12 @@
         <div class='introduce'>
             <div>
                 <h2>교육 목적 및 목표</h2>
-                <p>디자인기술이 창의적인 디자인 발상법과 공학적 마인드의 통합적 접근법을 추구하는 시대로 바뀜에 따라 단순히 심미적 역할에만 머물렀던 디자인 개념에서 확장하여 4차 산업혁명 기술 분야를 선도하고자 디자인학부가 디자인공학부로 변경되었습니다. 새로운 디자인공학부는 전공 분야 최고의 교수진과 산업체 수요 기반 실무형 교육과정을 통해 미래사회를 이끌어나갈 창의적 인재를 양성하는데 최선을 다하겠습니다.</p>
+                <p>사용자 중심 디자인 원리에 기반하여 인터랙티브 미디어를 구현할 수 있는 실무형 인재육성
+                    모바일 앱, 웹, 체감형 콘텐츠를 활용한 인터랙티브 미디어를 구현하기 위해 사용자 조사와 분석, UX/UI, 콘텐츠 기획, 2D/3D 그래픽 디자인, 프로그래밍 개발 과정을 통합적으로 수행할 수 있는 디자이너를 양성
+                    웹/앱 SW 구현, AR/VR 융합 영상을 제작할 수 있는 디자이너
+                    인터랙티브 웹/앱 및 체감형 AR/VR 컨텐츠 디자인과 개발 분야 학습</p>
             </div>
-            <div id='introduceImg'></div>
+            <div class='introduceImg' id='int_img2'></div>
         </div>
     </div>
 
