--- a/company2.html
+++ b/company2.html
@@ -298,11 +298,14 @@ footer {
     margin-top: 140px;
 }
 
-footer h1 {
+footer h3 {
     text-align: center;
     line-height: 230px;
-    color: rgb(139, 139, 139);
+    color: #333;
+    font-size: 26px;
+    font-weight: 400;
 }
+
 
 
     </style>
